# task_for_polimedika

./: README.md
.github/workflows/: pol_actions.yml
application/: Dockerfile  alembic.ini  pyproject.toml
application/alembic/: env.py
application/alembic/versions/: 894b2e0b2383_initial.py
application/application/: config.py  database.py  exceptions.py  main.py  managers.py  models.py  router.py  schemas.py  services.py  settings.py
application/application/course/: managers.py  models.py  schemas.py  views.py
application/application/curriculum/: models.py  schemas.py  views.py
application/application/exam/: models.py  schemas.py  views.py
application/application/faculty/: models.py  schemas.py  views.py
application/application/schedule/: models.py  views.py
application/application/semester/: managers.py  models.py  schemas.py  views.py
application/application/student/: managers.py  models.py  schemas.py  views.py
application/application/teacher/: models.py  views.py
pol-infra/: .env.template  docker-compose.yml
