[tool.poetry]
name = "application"
version = "0.1.0"
description = ""
license = "LICENSE"
authors = ["Смелов Илья <https://github.com/PivnoyFei>"]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.11.1"
isort = "^5.12.0"
fastapi = "^0.96.0"
sqlalchemy = "^2.0.15"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.6"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true
line-length = 100

[tool.ruff]
extend-exclude = ["tests"]

exclude = [
    "alembic",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "__pycache__",
    ".venv",
    "__pypackages__",
    "venv",
]
line-length = 100

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]
