[tool.poetry]
name = "application"
version = "0.1.0"
description = ""
license = "LICENSE"
authors = ["Смелов Илья <https://github.com/PivnoyFei>"]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.11.1"
fastapi = "^0.96.0"
sqlalchemy = "^2.0.15"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"
isort = "^5.12.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target_version = ['py311']
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.ruff]
ignore = [
    "E722",
]
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "alembic",
    "__pycache__",
]

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]
